# ephemeral-skills

./: .gitignore  .mcp.json  DESIGN.md  PRODUCTION.md  README.md  pyproject.toml
scripts/: run_e2e.py
src/ephemeral_skills/: agent.py  catalog.py  grader.py  search.py  server.py
tests/: conftest.py  test_catalog.py  test_search.py  test_server.py
tests/e2e/: test_cases.json  test_e2e.py  test_trigger.py
