[project]
name = "ephemeral-skills"
version = "0.1.0"
description = "MCP server for on-demand skill discovery and delivery"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89.0",
    "mcp[cli]>=1.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ephemeral_skills"]
